--- a/README.org
+++ b/README.org
@@ -1,5 +1,9 @@
 * Bills to Beans
 
+![Screenshot of Bills to Beans][screenshot]
+
+[screenshot]: https://github.com/profound-labs/bills-to-beans/raw/master/docs/screenshot.jpg
+
 ** Contents                                                             :TOC:
  - [[#bills-to-beans][Bills to Beans]]
    - [[#overview][Overview]]
